--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-#titulo{
+body{
     text-align: center;
-    background-color: red;
-    color: white;
+    background-color: rgb(34, 34, 34);
+    color: rgb(80, 79, 79);
 }
-#playstation {
-
+.Produtos{
+    height: 25px;
+    width: 20px;
 }
