--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
-body{
-    text-align: center;
-    background-color: rgb(34, 34, 34);
-    color: rgb(80, 79, 79);
+body {
+        background-color: rgb(17, 17, 17);
+        color: white;
+    }
+    .cabeçalho {
+        background-color: rgb(59, 193, 255);
+        
+    }
+
+
+
+.cabeçalho  li{
+    display: flex;
+    text-decoration: underline;
+    font-family: arial;
+    list-style-type: none;
+    
+
 }
-.Produtos{
-    height: 25px;
-    width: 20px;
+
+
+.Produtos img {
+    width: 300px;
+    height: 300px;
+    
 }
